--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
+    "name": "customcasper",
+    "description": "Custom Casper with photos, Based on Casper",
     "demo": "https://demo.ghost.io",
-    "version": "3.0.5",
+    "version": "3.0.584",
     "engines": {
         "ghost": ">=3.0.0",
         "ghost-api": "v3"
